gh-5279 Fix TestPhysicalDeleteExecutor